fix: Fix layout issue

--- a/custom.css
+++ b/custom.css
@@ -1,5 +1,8 @@
-
 /* General styles */
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Lora', serif;
     color: #333;
@@ -29,13 +32,20 @@ a:hover {
     padding: 20px;
 }
 
+.container::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 .main-content {
     width: 70%;
     float: left;
+    padding-right: 20px;
 }
 
 .sidebar {
-    width: 25%;
+    width: 30%;
     float: right;
 }
 
